algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -52,27 +52,15 @@ ex) 150 >> 2; 150의 이진값을 오른쪽으로 2칸 시프트 합니다.
 
 150 >>> 2; 오른쪽으로 2비트 시프트 합니다.
 
-자바에 추가된 논리 시프트는 오른쪽으로 밀면서 비게되는 앞쪽 비트를 무조건 0으로 채워넣는 것이다.
-
-  
-
 1 0 0 1 0 1 1 0
-
 0 0 1 0 0 1 0 1 1 0
 
-  
+자바에 추가된 논리 시프트는 오른쪽으로 밀면서 비게되는 **앞쪽 비트를 무조건 0으로 채워넣는 것이다.** 마찬가지로 밀려난 밀려난 오른쪽 2개비트 1 0 은 삭제된다.
 
-으로 되는 것. 비게 되는 왼쪽 2비트가 무조건 0 으로 채워집니다.
-
-밀려난 오른쪽 2개비트 1 0 은 삭제됩니다.
-
-  
-  
-출처: [https://techlog.gurucat.net/157](https://techlog.gurucat.net/157) [하얀쿠아의 이것저것 만들기 Blog]
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgyNzc0MjAyNCwyMjA2NzY2MCwtNzE1Mz
-QyODIzLC0zNDM4MjA3MDksMTg2NTU5ODQ4MCw5OTk5OTA2MTMs
-LTE2Mzc5NTgzMTJdfQ==
+eyJoaXN0b3J5IjpbNDExNDE5NDkxLDIyMDY3NjYwLC03MTUzND
+I4MjMsLTM0MzgyMDcwOSwxODY1NTk4NDgwLDk5OTk5MDYxMywt
+MTYzNzk1ODMxMl19
 -->
