--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -57,10 +57,13 @@ ex) 150 >> 2; 150의 이진값을 오른쪽으로 2칸 시프트 합니다.
 
 자바에 추가된 논리 시프트는 오른쪽으로 밀면서 비게되는 **앞쪽 비트를 무조건 0으로 채워넣는 것이다.** 마찬가지로 밀려난 밀려난 오른쪽 2개비트 1 0 은 삭제된다.
 
+### 비트마스크를 이용한 집합 구현
+
+
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDExNDE5NDkxLDIyMDY3NjYwLC03MTUzND
-I4MjMsLTM0MzgyMDcwOSwxODY1NTk4NDgwLDk5OTk5MDYxMywt
-MTYzNzk1ODMxMl19
+eyJoaXN0b3J5IjpbLTY0MjIxNDk1LDQxMTQxOTQ5MSwyMjA2Nz
+Y2MCwtNzE1MzQyODIzLC0zNDM4MjA3MDksMTg2NTU5ODQ4MCw5
+OTk5OTA2MTMsLTE2Mzc5NTgzMTJdfQ==
 -->
