algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -59,11 +59,11 @@ ex) 150 >> 2; 150의 이진값을 오른쪽으로 2칸 시프트 합니다.
 
 ### 비트마스크를 이용한 집합 구현
 
-
+비트 마스크에서 가장 주
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY0MjIxNDk1LDQxMTQxOTQ5MSwyMjA2Nz
-Y2MCwtNzE1MzQyODIzLC0zNDM4MjA3MDksMTg2NTU5ODQ4MCw5
-OTk5OTA2MTMsLTE2Mzc5NTgzMTJdfQ==
+eyJoaXN0b3J5IjpbLTcxMTE4OTk0LC02NDIyMTQ5NSw0MTE0MT
+k0OTEsMjIwNjc2NjAsLTcxNTM0MjgyMywtMzQzODIwNzA5LDE4
+NjU1OTg0ODAsOTk5OTkwNjEzLC0xNjM3OTU4MzEyXX0=
 -->
