--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -62,13 +62,26 @@ ex) 150 >> 2; 150의 이진값을 오른쪽으로 2칸 시프트 합니다.
 비트 마스크에서 가장 중요한 사용 사례는 집합을 구현하는 것이다. 이 표현에서 N비트 정수 변수는 0 ~ N-1 까지 정수 원소를 가질 수 있는 집합이 된다. 이때 원소 i가 집합에 속해 있는지 여부는 $2^i$을 나타내는 비트가 켜져있는지 여부로 나타낸다. 
 
 예를들어, {1, 4,5,6,7,9}집합을 나타내는 정수는 754이다. 
+$2^1 + 2^4 + 2^5 + 2^6 + 2^7 +2^9 = 10 1111 0010_2 =754$ 
 
-$2^1 + 2^4 + 2^5 + 2^6 + 2^7 +2^9$ = 10 11
+#### 추가
+
+#### 삭제 
+
+#### 포함 확인 
+
+#### 토글
+
+#### 두 집합 연산하기 
+
+#### 집합 크기 구하기
+
+
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc0OTQ2OTI4MCwtMjc1MTQwODc4LC02ND
-IyMTQ5NSw0MTE0MTk0OTEsMjIwNjc2NjAsLTcxNTM0MjgyMywt
-MzQzODIwNzA5LDE4NjU1OTg0ODAsOTk5OTkwNjEzLC0xNjM3OT
-U4MzEyXX0=
+eyJoaXN0b3J5IjpbLTE4NzA1Nzc0NTMsLTI3NTE0MDg3OCwtNj
+QyMjE0OTUsNDExNDE5NDkxLDIyMDY3NjYwLC03MTUzNDI4MjMs
+LTM0MzgyMDcwOSwxODY1NTk4NDgwLDk5OTk5MDYxMywtMTYzNz
+k1ODMxMl19
 -->
