--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -64,11 +64,11 @@ ex) 150 >> 2; 150의 이진값을 오른쪽으로 2칸 시프트 합니다.
 예를들어, {1, 4,5,6,7,9}집합을 나타내는 정수는 754이다. 
 $2^1 + 2^4 + 2^5 + 2^6 + 2^7 +2^9 = 10 1111 0010_2 =754$ 
 
-#### 공집합 또는 꽉찬 집합 구하기
+>공집합 또는 꽉찬 집합 구하기
 ```
-int bitmask = 1 << N - 1
+int emptySet = 0;
+int noneEmptySet = (1 << N) - 1;
 ```
-
 
 #### 추가
 
@@ -86,8 +86,8 @@ int bitmask = 1 << N - 1
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjg2OTc4MjA3LC0xODcwNTc3NDUzLC0yNz
-UxNDA4NzgsLTY0MjIxNDk1LDQxMTQxOTQ5MSwyMjA2NzY2MCwt
-NzE1MzQyODIzLC0zNDM4MjA3MDksMTg2NTU5ODQ4MCw5OTk5OT
-A2MTMsLTE2Mzc5NTgzMTJdfQ==
+eyJoaXN0b3J5IjpbMTA2ODIzODMwMSwtMTg3MDU3NzQ1MywtMj
+c1MTQwODc4LC02NDIyMTQ5NSw0MTE0MTk0OTEsMjIwNjc2NjAs
+LTcxNTM0MjgyMywtMzQzODIwNzA5LDE4NjU1OTg0ODAsOTk5OT
+kwNjEzLC0xNjM3OTU4MzEyXX0=
 -->
