algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -67,10 +67,13 @@ $2^1 + 2^4 + 2^5 + 2^6 + 2^7 +2^9 = 10 1111 0010_2 =754$
 >공집합 또는 꽉찬 집합 구하기
 ```
 int emptySet = 0;
-int noneEmptySet = (1 << N) - 1; // 1뒤에 N개의 0이 있다. 여기서 
+int noneEmptySet = (1 << N) - 1; 
+// 1뒤에 N개의 0이 있다. 여기서 -1을 하면 N개의 0이 1이 된다.
 ```
 
-#### 추가
+>추가
+
+
 
 #### 삭제 
 
@@ -86,7 +89,7 @@ int noneEmptySet = (1 << N) - 1; // 1뒤에 N개의 0이 있다. 여기서
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNDA4MzM2NTYsLTE4NzA1Nzc0NTMsLT
+eyJoaXN0b3J5IjpbLTE5MDI2MjAwMjUsLTE4NzA1Nzc0NTMsLT
 I3NTE0MDg3OCwtNjQyMjE0OTUsNDExNDE5NDkxLDIyMDY3NjYw
 LC03MTUzNDI4MjMsLTM0MzgyMDcwOSwxODY1NTk4NDgwLDk5OT
 k5MDYxMywtMTYzNzk1ODMxMl19
