algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -72,7 +72,9 @@ int noneEmptySet = (1 << N) - 1;
 ```
 
 >추가
-
+```
+int bitmask |= (1 << p);
+```
 
 
 #### 삭제 
@@ -89,8 +91,8 @@ int noneEmptySet = (1 << N) - 1;
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MDI2MjAwMjUsLTE4NzA1Nzc0NTMsLT
-I3NTE0MDg3OCwtNjQyMjE0OTUsNDExNDE5NDkxLDIyMDY3NjYw
-LC03MTUzNDI4MjMsLTM0MzgyMDcwOSwxODY1NTk4NDgwLDk5OT
-k5MDYxMywtMTYzNzk1ODMxMl19
+eyJoaXN0b3J5IjpbMTgzMzEyMDk0NSwtMTg3MDU3NzQ1MywtMj
+c1MTQwODc4LC02NDIyMTQ5NSw0MTE0MTk0OTEsMjIwNjc2NjAs
+LTcxNTM0MjgyMywtMzQzODIwNzA5LDE4NjU1OTg0ODAsOTk5OT
+kwNjEzLC0xNjM3OTU4MzEyXX0=
 -->
