algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -73,7 +73,8 @@ int noneEmptySet = (1 << N) - 1;
 
 >추가
 ```
-int bitmask |= (1 << p);
+// p 번째 원소를 추가하고자 한다. 
+int bitmask |= (1 << p); //
 ```
 
 
@@ -91,7 +92,7 @@ int bitmask |= (1 << p);
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgzMzEyMDk0NSwtMTg3MDU3NzQ1MywtMj
+eyJoaXN0b3J5IjpbLTY5MjMxNDMxMywtMTg3MDU3NzQ1MywtMj
 c1MTQwODc4LC02NDIyMTQ5NSw0MTE0MTk0OTEsMjIwNjc2NjAs
 LTcxNTM0MjgyMywtMzQzODIwNzA5LDE4NjU1OTg0ODAsOTk5OT
 kwNjEzLC0xNjM3OTU4MzEyXX0=
