--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -74,7 +74,7 @@ int noneEmptySet = (1 << N) - 1;
 >추가
 ```
 // p 번째 원소를 추가하고자 한다. 
-int bitmask |= (1 << p); //
+int bitmask |= (1 << p); // 1을 왼쪽으로 p번 움직이면 
 ```
 
 
@@ -92,8 +92,8 @@ int bitmask |= (1 << p); //
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY5MjMxNDMxMywtMTg3MDU3NzQ1MywtMj
-c1MTQwODc4LC02NDIyMTQ5NSw0MTE0MTk0OTEsMjIwNjc2NjAs
-LTcxNTM0MjgyMywtMzQzODIwNzA5LDE4NjU1OTg0ODAsOTk5OT
-kwNjEzLC0xNjM3OTU4MzEyXX0=
+eyJoaXN0b3J5IjpbLTE3Mjk5NTU2MjQsLTE4NzA1Nzc0NTMsLT
+I3NTE0MDg3OCwtNjQyMjE0OTUsNDExNDE5NDkxLDIyMDY3NjYw
+LC03MTUzNDI4MjMsLTM0MzgyMDcwOSwxODY1NTk4NDgwLDk5OT
+k5MDYxMywtMTYzNzk1ODMxMl19
 -->
