--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -64,17 +64,18 @@ ex) 150 >> 2; 150의 이진값을 오른쪽으로 2칸 시프트 합니다.
 예를들어, {1, 4,5,6,7,9}집합을 나타내는 정수는 754이다. 
 $2^1 + 2^4 + 2^5 + 2^6 + 2^7 +2^9 = 10 1111 0010_2 =754$ 
 
->공집합 또는 꽉찬 집합 구하기
+>
 ```
+/*공집합 또는 꽉찬 집합 구하기*/
 int emptySet = 0;
-int noneEmptySet = (1 << N) - 1; 
-// 1뒤에 N개의 0이 있다. 여기서 -1을 하면 N개의 0이 1이 된다.
+int noneEmptySet = (1 << N) - 1; // 1뒤에 N개의 0이 있다. 여기서 -1을 하면 N개의 0이 1이 된다.
+/* p 번째 원소를 추가하고자 한다.*/
+int bitmask |= (1 << p); // 1을 왼쪽으로 p번 움직이면, p만 켜진 정수가 된다. 이 값을 기존 bitmask와 OR 연산을 하면 반드시 해당 비트는 켜지게 된다. 
+
 ```
 
 >추가
 ```
-// p 번째 원소를 추가하고자 한다. 
-int bitmask |= (1 << p); // 1을 왼쪽으로 p번 움직이면, p만 켜진 정수가 된다. 이 값을 기존 bitmask와 OR 연산을 하면 반드시 해당 비트는 켜지게 된다. 
 ```
 > 삭제
 ```
@@ -99,8 +100,8 @@ bitmask ^= (1 << p);
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0MzgxNjM4MjAsLTE4NzA1Nzc0NTMsLT
-I3NTE0MDg3OCwtNjQyMjE0OTUsNDExNDE5NDkxLDIyMDY3NjYw
-LC03MTUzNDI4MjMsLTM0MzgyMDcwOSwxODY1NTk4NDgwLDk5OT
-k5MDYxMywtMTYzNzk1ODMxMl19
+eyJoaXN0b3J5IjpbLTI0Mzc3MzU0OCwtMTQzODE2MzgyMCwtMT
+g3MDU3NzQ1MywtMjc1MTQwODc4LC02NDIyMTQ5NSw0MTE0MTk0
+OTEsMjIwNjc2NjAsLTcxNTM0MjgyMywtMzQzODIwNzA5LDE4Nj
+U1OTg0ODAsOTk5OTkwNjEzLC0xNjM3OTU4MzEyXX0=
 -->
