algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -69,29 +69,16 @@ $2^1 + 2^4 + 2^5 + 2^6 + 2^7 +2^9 = 10 1111 0010_2 =754$
 /*공집합 또는 꽉찬 집합 구하기*/
 int emptySet = 0;
 int noneEmptySet = (1 << N) - 1; // 1뒤에 N개의 0이 있다. 여기서 -1을 하면 N개의 0이 1이 된다.
-
-/*p 번째 원소를 추가*/
-int bitmask |= (1 << p); // 1을 왼쪽으로 p번 움직이면, p만 켜진 정수가 된다. 이 값을 기존 bitmask와 OR 연산을 하면 반드시 해당 비트는 켜지게 된다. 
-
+/*p번째 원소를 추가*/
+int bitmask |= (1 << p); // 1을 왼쪽으로 p번 움직이면, p만 켜진 정수가 된다. 이 값을 기존 bitmask와 OR 연산을 하면 반드시 해당 비트는 켜지게 된다.
 /*p번째 원소를 삭제*/
 int bitmask &= ~(1 << p); // 1을 왼쪽으로 p번 움직이면, p만 켜진 정수가 된다. 여기서 보수(NOT) 처리를 하면 p만 꺼지고 나머지는 모두 켜진 bitmask가 된다. 이 bitmask와 AND 연산을 하면 반드시 해당 비트는 꺼지게 된다.
-
 /*p번째 원소가 1인지 0인지*/
 boolean exist = bitmask & (1 << p)
-/*p번*/
+/*p번째 원소 토글(Toggle)*/
 int bitmask ^= (1 << p);
 ```
 
-``` 
->포함 확인 
-```
-// p 번째 원소가 1인지 아닌지
-
-``` 
->토글
-```
-
-```
 
 #### 두 집합 연산하기 
 
@@ -101,8 +88,8 @@ int bitmask ^= (1 << p);
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NzQ0NjQxNSwtMTQzODE2MzgyMCwtMT
-g3MDU3NzQ1MywtMjc1MTQwODc4LC02NDIyMTQ5NSw0MTE0MTk0
-OTEsMjIwNjc2NjAsLTcxNTM0MjgyMywtMzQzODIwNzA5LDE4Nj
-U1OTg0ODAsOTk5OTkwNjEzLC0xNjM3OTU4MzEyXX0=
+eyJoaXN0b3J5IjpbODI0MjU0MjcyLC0xNDM4MTYzODIwLC0xOD
+cwNTc3NDUzLC0yNzUxNDA4NzgsLTY0MjIxNDk1LDQxMTQxOTQ5
+MSwyMjA2NzY2MCwtNzE1MzQyODIzLC0zNDM4MjA3MDksMTg2NT
+U5ODQ4MCw5OTk5OTA2MTMsLTE2Mzc5NTgzMTJdfQ==
 -->
