algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -81,6 +81,9 @@ boolean exist = bitmask & (1 << p)
 
 /*p번째 원소 토글(Toggle)*/
 int bitmask ^= (1 << p);
+
+/*p번째 원소 토글(Toggle)*/
+
 ```
 
 
@@ -92,7 +95,7 @@ int bitmask ^= (1 << p);
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTE4NzI2MzY0LC0xNDM4MTYzODIwLC0xOD
+eyJoaXN0b3J5IjpbMzUxNzgyMjM1LC0xNDM4MTYzODIwLC0xOD
 cwNTc3NDUzLC0yNzUxNDA4NzgsLTY0MjIxNDk1LDQxMTQxOTQ5
 MSwyMjA2NzY2MCwtNzE1MzQyODIzLC0zNDM4MjA3MDksMTg2NT
 U5ODQ4MCw5OTk5OTA2MTMsLTE2Mzc5NTgzMTJdfQ==
