algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -82,20 +82,15 @@ boolean exist = bitmask & (1 << p)
 /*p번째 원소 토글(Toggle)*/
 int bitmask ^= (1 << p);
 
-/*p번째 원소 토글(Toggle)*/
+/*두집합 연산*/
+
+/*집합 크기 구하기*/
 
 ```
 
-
-#### 두 집합 연산하기 
-
-#### 집합 크기 구하기
-
-
-
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzUxNzgyMjM1LC0xNDM4MTYzODIwLC0xOD
+eyJoaXN0b3J5IjpbNjExNzc1ODcwLC0xNDM4MTYzODIwLC0xOD
 cwNTc3NDUzLC0yNzUxNDA4NzgsLTY0MjIxNDk1LDQxMTQxOTQ5
 MSwyMjA2NzY2MCwtNzE1MzQyODIzLC0zNDM4MjA3MDksMTg2NT
 U5ODQ4MCw5OTk5OTA2MTMsLTE2Mzc5NTgzMTJdfQ==
