algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -83,6 +83,10 @@ boolean exist = bitmask & (1 << p)
 int bitmask ^= (1 << p);
 
 /*두집합 연산*/
+int bitmask = a | b; // 합집합
+int bitmask = a & b; // 교집합
+int bitmask = a & (~b); // 차집합
+int bitmask = a | b;
 
 /*집합 크기 구하기*/
 
@@ -90,8 +94,9 @@ int bitmask ^= (1 << p);
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjExNzc1ODcwLC0xNDM4MTYzODIwLC0xOD
-cwNTc3NDUzLC0yNzUxNDA4NzgsLTY0MjIxNDk1LDQxMTQxOTQ5
-MSwyMjA2NzY2MCwtNzE1MzQyODIzLC0zNDM4MjA3MDksMTg2NT
-U5ODQ4MCw5OTk5OTA2MTMsLTE2Mzc5NTgzMTJdfQ==
+eyJoaXN0b3J5IjpbLTE3MzEyNDkyNTIsNjExNzc1ODcwLC0xND
+M4MTYzODIwLC0xODcwNTc3NDUzLC0yNzUxNDA4NzgsLTY0MjIx
+NDk1LDQxMTQxOTQ5MSwyMjA2NzY2MCwtNzE1MzQyODIzLC0zND
+M4MjA3MDksMTg2NTU5ODQ4MCw5OTk5OTA2MTMsLTE2Mzc5NTgz
+MTJdfQ==
 -->
