algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -85,8 +85,8 @@ int bitmask ^= (1 << p);
 /*두집합 연산*/
 int bitmask = a | b; // 합집합
 int bitmask = a & b; // 교집합
-int bitmask = a & (~b); // 차집합
-int bitmask = a | b;
+int bitmask = a & (~b); // 차집합 a에서 b가 아닌것들 남기기
+int bitmask = a | b; // 
 
 /*집합 크기 구하기*/
 
@@ -94,9 +94,9 @@ int bitmask = a | b;
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MzEyNDkyNTIsNjExNzc1ODcwLC0xND
-M4MTYzODIwLC0xODcwNTc3NDUzLC0yNzUxNDA4NzgsLTY0MjIx
-NDk1LDQxMTQxOTQ5MSwyMjA2NzY2MCwtNzE1MzQyODIzLC0zND
-M4MjA3MDksMTg2NTU5ODQ4MCw5OTk5OTA2MTMsLTE2Mzc5NTgz
-MTJdfQ==
+eyJoaXN0b3J5IjpbNTc0NzU2ODYwLDYxMTc3NTg3MCwtMTQzOD
+E2MzgyMCwtMTg3MDU3NzQ1MywtMjc1MTQwODc4LC02NDIyMTQ5
+NSw0MTE0MTk0OTEsMjIwNjc2NjAsLTcxNTM0MjgyMywtMzQzOD
+IwNzA5LDE4NjU1OTg0ODAsOTk5OTkwNjEzLC0xNjM3OTU4MzEy
+XX0=
 -->
