algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -86,17 +86,18 @@ int bitmask ^= (1 << p);
 int bitmask = a | b; // 합집합
 int bitmask = a & b; // 교집합
 int bitmask = a & (~b); // 차집합 a에서 b가 아닌것들 남기기
-int bitmask = a | b; // 
+int bitmask = a ^ b; // a와 b 중 하나만 포함된 원소
 
 /*집합 크기 구하기*/
+
 
 ```
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTc0NzU2ODYwLDYxMTc3NTg3MCwtMTQzOD
-E2MzgyMCwtMTg3MDU3NzQ1MywtMjc1MTQwODc4LC02NDIyMTQ5
-NSw0MTE0MTk0OTEsMjIwNjc2NjAsLTcxNTM0MjgyMywtMzQzOD
-IwNzA5LDE4NjU1OTg0ODAsOTk5OTkwNjEzLC0xNjM3OTU4MzEy
-XX0=
+eyJoaXN0b3J5IjpbMjAwMTI3NjYyNiw2MTE3NzU4NzAsLTE0Mz
+gxNjM4MjAsLTE4NzA1Nzc0NTMsLTI3NTE0MDg3OCwtNjQyMjE0
+OTUsNDExNDE5NDkxLDIyMDY3NjYwLC03MTUzNDI4MjMsLTM0Mz
+gyMDcwOSwxODY1NTk4NDgwLDk5OTk5MDYxMywtMTYzNzk1ODMx
+Ml19
 -->
