algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -87,17 +87,17 @@ int bitmask = a | b; // 합집합
 int bitmask = a & b; // 교집합
 int bitmask = a & (~b); // 차집합 a에서 b가 아닌것들 남기기
 int bitmask = a ^ b; // a와 b 중 하나만 포함된 원소
-
-/*집합 크기 구하기*/
-
-
 ```
+
+## 에라토스테네스의 체 
+
+## 극대
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAwMTI3NjYyNiw2MTE3NzU4NzAsLTE0Mz
-gxNjM4MjAsLTE4NzA1Nzc0NTMsLTI3NTE0MDg3OCwtNjQyMjE0
-OTUsNDExNDE5NDkxLDIyMDY3NjYwLC03MTUzNDI4MjMsLTM0Mz
-gyMDcwOSwxODY1NTk4NDgwLDk5OTk5MDYxMywtMTYzNzk1ODMx
-Ml19
+eyJoaXN0b3J5IjpbNzEyNDA2OSw2MTE3NzU4NzAsLTE0MzgxNj
+M4MjAsLTE4NzA1Nzc0NTMsLTI3NTE0MDg3OCwtNjQyMjE0OTUs
+NDExNDE5NDkxLDIyMDY3NjYwLC03MTUzNDI4MjMsLTM0MzgyMD
+cwOSwxODY1NTk4NDgwLDk5OTk5MDYxMywtMTYzNzk1ODMxMl19
+
 -->
