algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -1,6 +1,7 @@
+# Overview
+
 컴퓨터의 동작과 이산 수학은 뗄레야 뗄 수 없는 관계이기 때문에, 연관된 정수론에 관련된 문제들도 자주 알고리즘 문제로 출제된다.
 
-# 기본 개념
 
 소수(prime number)
 : 양의 약수로 1과 자기자신만을 가지는 자연수를 말한다. 
@@ -38,11 +39,11 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYwNDcyMDgwOCwxOTA5NTMzOTQ2LC0yMD
-M5MTYwOTkwLC0xNTAxODU0NTEyLC0xNjkxNzg0NDk5LDEwOTcz
-NjUwMzUsMTEzMzU2MjM1LC0xMDY4OTQ3NzIzLC0xNzIxNDA2MD
-A2LDEwNTU0NDU0NzIsLTk4OTAyMzAwNSwtMTc2ODEzMTg4NSwy
-MDIwMTM4NjMxLDEzMDkyMjcwNjksMTkwMzAzNjk5NCwtMzAzMz
-U3Mjg0LDc5MDkzOTMzNCwtNTUyNjMwNDQ5LC01NTI1MzY2MzAs
-NDI5NTg4MjI3XX0=
+eyJoaXN0b3J5IjpbLTc0MTU5NDgzOSwxNjA0NzIwODA4LDE5MD
+k1MzM5NDYsLTIwMzkxNjA5OTAsLTE1MDE4NTQ1MTIsLTE2OTE3
+ODQ0OTksMTA5NzM2NTAzNSwxMTMzNTYyMzUsLTEwNjg5NDc3Mj
+MsLTE3MjE0MDYwMDYsMTA1NTQ0NTQ3MiwtOTg5MDIzMDA1LC0x
+NzY4MTMxODg1LDIwMjAxMzg2MzEsMTMwOTIyNzA2OSwxOTAzMD
+M2OTk0LC0zMDMzNTcyODQsNzkwOTM5MzM0LC01NTI2MzA0NDks
+LTU1MjUzNjYzMF19
 -->
