algorithms/비트마스크 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/비트마스크 알고리즘.md
+++ b/algorithms/비트마스크 알고리즘.md
@@ -77,7 +77,7 @@ int bitmask |= (1 << p); // 1을 왼쪽으로 p번 움직이면, p만 켜진 정
 int bitmask &= ~(1 << p); // 1을 왼쪽으로 p번 움직이면, p만 켜진 정수가 된다. 여기서 보수(NOT) 처리를 하면 p만 꺼지고 나머지는 모두 켜진 bitmask가 된다. 이 bitmask와 AND 연산을 하면 반드시 해당 비트는 꺼지게 된다.
 
 /*p번째 원소가 1인지 0인지*/
-int bitmask = bitmask & (1 << p)
+int bitmask = (bitmask & (1 << target)) > 0;
 
 /*p번째 원소 토글(Toggle)*/
 int bitmask ^= (1 << p);
@@ -99,5 +99,6 @@ int bitmask = a ^ b; // a와 b 중 하나만 포함된 원소
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjczNTg0OTY4LC0xODY0NzE5ODIzXX0=
+eyJoaXN0b3J5IjpbLTIwMjM3OTgxOTMsLTE4NjQ3MTk4MjNdfQ
+==
 -->
