algorithms/비트마스크 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/비트마스크 알고리즘.md
+++ b/algorithms/비트마스크 알고리즘.md
@@ -92,13 +92,12 @@ int bitmask = a ^ b; // a와 b 중 하나만 포함된 원소
 ## 에라토스테네스의 체
 
 
-
 ## 극대 안정 집합(maximal stable set)
 
 ## 졸업 학기
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMjM3OTgxOTMsLTE4NjQ3MTk4MjNdfQ
-==
+eyJoaXN0b3J5IjpbMTM5MTg4ODQ0NSwtMjAyMzc5ODE5MywtMT
+g2NDcxOTgyM119
 -->
