algorithms/비트마스크 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/비트마스크 알고리즘.md
+++ b/algorithms/비트마스크 알고리즘.md
@@ -89,15 +89,14 @@ int bitmask = a & (~b); // 차집합 a에서 b가 아닌것들 남기기
 int bitmask = a ^ b; // a와 b 중 하나만 포함된 원소
 ```
 
-## 에라토스테네스의 체
-
-
 ## 극대 안정 집합(maximal stable set)
+
+$N$개의 화학 물질을 운반해야 한다고 하자. 각 화학 물질은 무해하지만, 서로 반응하여 폭발하는 물질들이 있다. 이때 한 상자에 넣어도 폭발하지 않는 물질의 집합을 안정
 
 ## 졸업 학기
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM5MTg4ODQ0NSwtMjAyMzc5ODE5MywtMT
-g2NDcxOTgyM119
+eyJoaXN0b3J5IjpbMTQ2NTE1ODI3MiwxMzkxODg4NDQ1LC0yMD
+IzNzk4MTkzLC0xODY0NzE5ODIzXX0=
 -->
