algorithms/비트마스크 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/비트마스크 알고리즘.md
+++ b/algorithms/비트마스크 알고리즘.md
@@ -91,12 +91,14 @@ int bitmask = a ^ b; // a와 b 중 하나만 포함된 원소
 
 ## 극대 안정 집합(maximal stable set)
 
-$N$개의 화학 물질을 운반해야 한다고 하자. 각 화학 물질은 무해하지만, 서로 반응하여 폭발하는 물질들이 있다. 이때 한 상자에 넣어도 폭발하지 않는 물질의 집합을 안정
+$N$개의 화학 물질을 운반해야 한다고 하자. 각 화학 물질은 무해하지만, 서로 반응하여 폭발하는 물질들이 있다. 이때 한 상자에 넣어도 폭발하지 않는 물질의 집합을 안정적이라 한다.
+
+물질이 하나만 있는 집합은 당연히 항상 안정적이다. 안정된 집합은 여러 종류가 있는데, 그 중 물질을 하나라도 추가하면 화학반응이 일어나는 집합을 바로 극대 안정 집합(Maximal Stable Set)
 
 ## 졸업 학기
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ2NTE1ODI3MiwxMzkxODg4NDQ1LC0yMD
-IzNzk4MTkzLC0xODY0NzE5ODIzXX0=
+eyJoaXN0b3J5IjpbNDA4MDA0NDgyLDEzOTE4ODg0NDUsLTIwMj
+M3OTgxOTMsLTE4NjQ3MTk4MjNdfQ==
 -->
