algorithms/비트마스크 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/비트마스크 알고리즘.md
+++ b/algorithms/비트마스크 알고리즘.md
@@ -93,12 +93,17 @@ int bitmask = a ^ b; // a와 b 중 하나만 포함된 원소
 
 $N$개의 화학 물질을 운반해야 한다고 하자. 각 화학 물질은 무해하지만, 서로 반응하여 폭발하는 물질들이 있다. 이때 한 상자에 넣어도 폭발하지 않는 물질의 집합을 안정적이라 한다.
 
-물질이 하나만 있는 집합은 당연히 항상 안정적이다. 안정된 집합은 여러 종류가 있는데, 그 중 물질을 하나라도 추가하면 화학반응이 일어나는 집합을 바로 극대 안정 집합(Maximal Stable Set)
+물질이 하나만 있는 집합은 당연히 항상 안정적이다. 안정된 집합은 여러 종류가 있는데, 그 중 물질을 하나라도 추가하면 화학반응이 일어나는 집합을 바로 극대 안정 집합(Maximal Stable Set)이라 한다. 
+
+극대 안정집합도 여러개가 있을 수 있다. 예를 들어 A, B, C ,D가 있을때 A-B를 상자에 넣거나 C-D를 넣으면 폭발한다고 하자. 그러면 아래와 같이 네 개의 극대 안정 집합이 존재 한다.
+{A,C}, {A, D}, {B,C}, {B,D}
+
+
 
 ## 졸업 학기
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDA4MDA0NDgyLDEzOTE4ODg0NDUsLTIwMj
-M3OTgxOTMsLTE4NjQ3MTk4MjNdfQ==
+eyJoaXN0b3J5IjpbLTEyNjg1NjMwMDEsMTM5MTg4ODQ0NSwtMj
+AyMzc5ODE5MywtMTg2NDcxOTgyM119
 -->
